Close Issue#1269 Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/opd/opd_bill.xhtml
+++ b/src/main/webapp/opd/opd_bill.xhtml
@@ -412,11 +412,11 @@
                                                 <p:commandButton value="Mark Local" 
                                                                  class="btn m-1"
                                                                  action="#{opdBillController.markAsLocal}" rendered="#{opdBillController.foreigner}" ajax="false" ></p:commandButton>
-                                                <p:commandButton value="Print Last Bill" 
+<!--                                                <p:commandButton value="Print Last Bill" 
                                                                  class="btn m-1"
                                                                  ajax="false" 
                                                                  action="opd_bill_print_last" >
-                                                </p:commandButton>
+                                                </p:commandButton>-->
                                             </div>
 
                                             <div class="col-md-12" >
