Signed-off-by: PasinduW99 <pwathsara@gmail.com>

--- a/src/main/webapp/inward/inward_edit_bht.xhtml
+++ b/src/main/webapp/inward/inward_edit_bht.xhtml
@@ -38,7 +38,7 @@
                             <p:commandButton ajax="false" value="Display Details" action="#{bhtEditController.displayDetails}" class="m-1"/>
                             <p:commandButton ajax="false" value="Update" action="#{bhtEditController.save}"  class="m-1">
                             </p:commandButton>
-                            <p:commandButton  value="Clear" action="#{bhtEditController.prepereForInwardAppointPatient}" ajax="false"  class="m-1" >
+                            <p:commandButton  value="Clear" action="#{bhtEditController.prepereForNew()}" ajax="false"  class="m-1" >
                             </p:commandButton>
                         </div>
                     </div>
