Closes Issue#1275 Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/opd/opd_bill_search.xhtml
+++ b/src/main/webapp/opd/opd_bill_search.xhtml
@@ -22,12 +22,12 @@
                             <div class="col-md-2">
                                 <div class="form d-flex flex-column" >
                                     <h:outputLabel value="From Date"/>
-                                    <p:calendar id="fromDate" value="#{opdBillController.fromDate}" navigator="false" pattern="dd MMMM yyyy hh mm ss a" class="w-100" inputStyleClass="form-control">      
+                                    <p:calendar id="fromDate" value="#{opdBillController.fromDate}" navigator="false" pattern="dd MMMM yyyy hh mm ss a" styleClass="dateTimePicker" class="w-100" inputStyleClass="form-control">      
                                     </p:calendar>
                                     <p:spacer height="10" width="5" ></p:spacer>
 
                                     <h:outputLabel value="To Date"/>
-                                    <p:calendar id="toDate" value="#{opdBillController.toDate}" navigator="false" pattern="dd MMMM yyyy hh mm ss a" class="w-100" inputStyleClass="form-control">                                                                              
+                                    <p:calendar id="toDate" value="#{opdBillController.toDate}" navigator="false" styleClass="dateTimePicker" pattern="dd MMMM yyyy hh mm ss a" class="w-100" inputStyleClass="form-control">                                                                              
                                     </p:calendar>
                                     <p:spacer height="10" width="5" ></p:spacer>
 
