Close Issue#1283 Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/inward/inward_search_professional.xhtml
+++ b/src/main/webapp/inward/inward_search_professional.xhtml
@@ -11,7 +11,7 @@
         <ui:composition template="/resources/template/template.xhtml">
             <ui:define name="content">
                 <h:form>
-                    <p:panel header="Search Bills" >
+                    <p:panel header="Search Professional Bills" >
                         <div class="row">
                             <div class="col-md-2">
                                <div class="form d-flex flex-column" >
