--- a/src/main/webapp/opd/opd_bill_print.xhtml
+++ b/src/main/webapp/opd/opd_bill_print.xhtml
@@ -117,6 +117,121 @@
                         </div>
 
 
+
+
+                        <h:panelGroup rendered="#{sessionController.loggedPreference.opdBillPaperType eq 'FiveFivePrintedPaper'}">
+                            <div class="nonPrintBlock">
+                                <p:commandButton value="Print" 
+                                                 process="@this" 
+                                                 update="@all" 
+                                                 type="button"  
+                                                 ajax="false">
+                                    <p:printer target="gpBillPreview" ></p:printer>
+                                </p:commandButton>
+
+                                <p:commandButton value="New Bill" ajax="false" action="#{billController.prepareNewBill()}" >
+                                </p:commandButton>
+                                <p:commandButton ajax="false" value="Batch Cancel" action="#{billController.cancellAll}" style="float: right;"
+                                                 onclick="if (!confirm('Are you sure you want to Cancel This Bill ?'))
+                                                             return false;"/>
+                            </div>
+                            <p:outputLabel value="Balance = #{billController.cashBalance}" style="font-weight: bold;font-size: 20pt;color: red;"/>
+                            <h:panelGroup id="gpBillPreview">
+                                <ui:repeat value="#{billController.bills}" var="bill">
+                                    <bi:opdBillPrintRuhunu bill="#{bill}" dup="false"/>
+                                </ui:repeat>
+                            </h:panelGroup>
+                        </h:panelGroup>
+
+                        <h:panelGroup rendered="#{sessionController.loggedPreference.opdBillPaperType eq 'FiveFivePaper'}">
+                            <div class="nonPrintBlock">
+                                <p:commandButton value="Print" ajax="false" action="#"  >
+                                    <p:printer target="fiveFivePaperWithHeadings" ></p:printer>
+                                </p:commandButton>
+
+                                <p:commandButton value="New Bill" ajax="false" action="#{billController.prepareNewBill()}" >
+                                </p:commandButton>
+
+                                <p:commandButton ajax="false" value="Batch Cancel" action="#{billController.cancellAll}" style="float: right;"
+                                                 onclick="if (!confirm('Are you sure you want to Cancel This Bill ?'))
+                                                             return false;"/>
+                            </div>
+                            <h:panelGroup id="fiveFivePaperWithHeadings">
+                                <ui:repeat value="#{billController.bills}" var="b">
+                                    <bi:five_five_paper_with_headings bill="#{b}"/>                        
+                                </ui:repeat>
+                            </h:panelGroup>
+                        </h:panelGroup>
+
+                        <h:panelGroup rendered="#{sessionController.loggedPreference.opdBillPaperType eq 'PosPaper'}">
+                            <h:panelGrid rendered="#{sessionController.loggedPreference.opdPosBillWithoutLogo eq false}">
+                                <div class="nonPrintBlock">
+                                    <p:commandButton value="Print" ajax="false" action="#"  >
+                                        <p:printer target="gpPosBill" ></p:printer>
+                                    </p:commandButton>
+
+
+
+                                    <p:commandButton value="New Bill" ajax="false" action="#{billController.prepareNewBill()}" >
+                                    </p:commandButton>
+
+                                    <p:commandButton ajax="false" value="Batch Cancel" action="#{billController.cancellAll}" style="float: right;"
+                                                     onclick="if (!confirm('Are you sure you want to Cancel This Bill ?'))
+                                                                 return false;"/>
+                                </div>
+                                <h:panelGroup id="gpPosBill">
+                                    <div style="page-break-after: always;">
+
+                                        <ui:repeat value="#{billController.bills}" var="b">
+                                            <bi:posOpdBill bill="#{b}" duplicate="false"/>                        
+                                        </ui:repeat>
+                                    </div>
+                                    <div></div>
+                                    <div style="page-break-after: always;">
+
+                                        <ui:repeat value="#{billController.bills}" var="b">
+                                            <bi:posOpdBill bill="#{b}" duplicate="false"/>                        
+                                        </ui:repeat>
+                                    </div>
+                                </h:panelGroup>
+                            </h:panelGrid>
+
+
+
+
+                            <h:panelGrid rendered="#{sessionController.loggedPreference.opdPosBillWithoutLogo eq true}">
+                                <div class="nonPrintBlock">
+                                    <p:commandButton value="Print" ajax="false" action="#"  >
+                                        <p:printer target="gpPosBillWithoutLogo" ></p:printer>
+                                    </p:commandButton>
+
+                                    <p:commandButton value="New Bill" ajax="false" action="#{billController.prepareNewBill()}" >
+                                    </p:commandButton>
+
+                                    <p:commandButton ajax="false" value="Batch Cancel" action="#{billController.cancellAll}" style="float: right;"
+                                                     onclick="if (!confirm('Are you sure you want to Cancel This Bill ?'))
+                                                                 return false;"/>
+                                </div>
+                                <h:panelGroup id="gpPosBillWithoutLogo">
+                                    <div style="page-break-after: always;">
+
+                                        <ui:repeat value="#{billController.bills}" var="b">
+                                            <bi:posOpdBillWithoutLogo bill="#{b}" duplicate="false"/>                        
+                                        </ui:repeat>
+                                    </div>     
+                                    <div style="page-break-after: always;">
+
+                                        <ui:repeat value="#{billController.bills}" var="b">
+                                            <bi:posOpdBillWithoutLogo bill="#{b}" duplicate="false"/>                        
+                                        </ui:repeat>
+                                    </div>  
+                                </h:panelGroup>
+                            </h:panelGrid>
+
+                        </h:panelGroup>
+
+
+
                     </h:form>
                 </h:panelGroup>
 
