--- a/src/main/webapp/index1.xhtml
+++ b/src/main/webapp/index1.xhtml
@@ -17,7 +17,7 @@
     <h:body>
         <ui:composition template="/resources/template/template.xhtml">
             <ui:insert name="content" >
-                
+                html5up-hyperspace
             </ui:insert>
         </ui:composition>
     </h:body>
