Closes #1288 Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/resources/bill/opdBillPrintRmh.xhtml
+++ b/src/main/webapp/resources/bill/opdBillPrintRmh.xhtml
@@ -8,7 +8,7 @@
 
     <!-- INTERFACE -->
     <cc:interface>
-        //<cc:attribute name="bill" type="com.divudi.entity.Bill" />
+        <cc:attribute name="bill" type="com.divudi.entity.Bill" />
         <cc:attribute name="dup"/>
         <cc:attribute name="refund"/>
         <cc:attribute name="cancell"/>
