--- a/src/main/webapp/resources/ezcomp/common_report.xhtml
+++ b/src/main/webapp/resources/ezcomp/common_report.xhtml
@@ -45,6 +45,10 @@
                                     data-height="#{myCli.htPix}"></canvas>
                         </h:panelGroup>
                     </h:panelGroup>
+                    
+                    <h:panelGroup rendered="#{myCli.ixItemType eq 'Css' and myCli.retired ne true }"  
+                                  layout="block" style=" #{myCli.description}"    >
+                    </h:panelGroup>
 
                     <h:outputText rendered="#{myCli.ixItemType eq 'Label' and myCli.retired ne true }"  value="#{myCli.name}" style="#{myIi.innerCssStyle};" escape="false" ></h:outputText>
                     <h:outputText rendered="#{myCli.ixItemType ne 'Label' and myCli.reportItemType eq 'PatientName' and myCli.retired eq false }"  value="#{cc.attrs.patientReport.patientInvestigation.patient.person.nameWithTitle}" style="#{myIi.innerCssStyle};" escape="false" ></h:outputText>
