Signed-off-by: Buddhika <buddhika@ohmis1.asia-southeast1-b.c.my-project-1537433467858.internal>

--- a/src/main/webapp/opd/opd_bill_print.xhtml
+++ b/src/main/webapp/opd/opd_bill_print.xhtml
@@ -20,8 +20,8 @@
                     <h:form>
 
 
-                        <div class="row" >
-                            <div class="col-6 p-1"  >
+                        <div class="row"  >
+                            <div class="col-6 p-1" style="font-size: 2em!important;"  >
 
                                 <h:panelGroup rendered="#{sessionController.loggedPreference.opdBillPaperType eq 'FiveFivePrintedPaper'}">
                                     <div class="nonPrintBlock">
